--- a/src/pages/Libraryold.css
+++ b/src/pages/Libraryold.css
@@ -1,7 +1,5 @@
 
 
-/* src/pages/Library.css */
-
 
 .library-container {
   margin-left: 200px; /* Tạo khoảng cách bằng với chiều rộng của sidebar */
@@ -30,15 +28,6 @@
   padding-bottom: 50px; 
 }
 
-/* .traffic-sign-card {
-  padding: 10px;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  text-align: center;
-  cursor: pointer;
-  transition: transform 0.2s ease;
-} */
 
 .traffic-sign-card {
   aspect-ratio: 1 / 1.5; /* Set aspect ratio to 1:1.5 (width:height) */
@@ -70,32 +59,6 @@
   font-size: 16px;
 }
 
-/* .traffic-sign-details {
-  width: 28%;
-  padding: 20px;
-  border-left: 1px solid #ddd;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-left: 20px;
-}
-
-.traffic-sign-details img {
-  width: 100%;
-  height: auto;
-  border-radius: 4px;
-  margin-bottom: 20px;
-}
-
-.traffic-sign-details h2 {
-  font-size: 24px;
-  margin-bottom: 10px;
-}
-
-.traffic-sign-details p {
-  font-size: 16px;
-  margin-bottom: 10px;
-} */
 
 .traffic-sign-details {
   position: fixed; /* Fixes the position */
@@ -117,7 +80,7 @@
   height: 89vh; 
   z-index: 10; /* Ensure it's on top of other content */
   border-radius: 10px; /* Rounded corners */
-  border: 3px solid #e74c3c; /* Border color */
+  border: 1px solid #e74c3c; /* Border color */
 }
 
 
@@ -276,4 +239,42 @@
   color: #ff0000;
   font-size: 16px;
   cursor: pointer;
+}
+
+
+
+.search-container {
+  width: 30%;
+  display: flex;
+  justify-content: flex-end; /* Căn thanh tìm kiếm về phía bên phải */
+  margin-bottom: 20px;
+  margin-right: 30%;
+  padding-left: 5px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border: 1px solid #e74c3c;
+  border-radius: 100px;
+}
+
+.search-input {
+  flex-grow: 1;
+  margin-left: 5px;
+  border: none;
+  width: 95%;
+  outline: none; /* Thêm dòng này để loại bỏ đường viền khi focus */
+
+}
+
+.search-icon {
+  cursor: pointer;
+  color: #ccc;
+  font-size: 1.5rem;
+  margin-right: 6px;
+}
+
+
+.upper-container {
+  width: 100%; /* Đảm bảo rộng bằng với phần chứa nó */
+  display: flex;
+  justify-content: flex-end; /* Căn phải các thành phần bên trong */
 }
